let users enter a description with hashtags when entering time

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -19,6 +19,7 @@
 @import "selectize";
 @import "dc";
 @import "select2";
+@import "tagger";
 
 ///////////////////////////////////////////////////////////////////////////////
 
