--- a/app/assets/stylesheets/_tagger.css.scss
+++ b/app/assets/stylesheets/_tagger.css.scss
@@ -24,14 +24,24 @@
   color: black;
 }
 
-.autocomplete {
-  position: absolute;
-  width: 100%;
+.atwho-view {
+  background-color: white;
+  border: 1px solid $light-gray;
+  width: 300px;
+  box-shadow: 0 0 5px rgba(0,0,0,0.1);
+  border-radius: 3px;
 
-  .suggestions {
-    li {
-      background-color: whitesmoke;
-      border: 1px solid gray;
+
+  li {
+    border-bottom: 1px solid $light-gray;
+    padding: 3px 7px;
+
+    &:last-child {
+      border-bottom: none;
+    }
+
+    &:hover {
+      background-color: $blue;
     }
   }
 }
