--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -20,6 +20,7 @@
 @import "dc";
 @import "select2";
 @import "tagger";
+@import "jquery.atwho";
 
 ///////////////////////////////////////////////////////////////////////////////
 
